# orientation-platform

./: .editorconfig  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260105_0001_001_initial_migration.py
apps/api/scripts/: __init__.py  seed_data.py
apps/api/src/: __init__.py  config.py  database.py  main.py
apps/api/src/models/: __init__.py  base.py  feedback.py  institution.py  profile.py  program.py  recommendation.py  trajectory.py
apps/api/src/routers/: __init__.py  feedback.py  profiles.py  programs.py  recommendations.py  trajectories.py
apps/api/src/schemas/: __init__.py  base.py  feedback.py  profiles.py  programs.py  recommendations.py  trajectories.py
apps/api/src/services/: __init__.py  feedback_service.py  profile_service.py  program_service.py  recommendation_service.py  trajectory_service.py
apps/api/tests/: __init__.py  conftest.py  test_health.py  test_profiles.py  test_recommendations.py
apps/web/: README.md  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css
apps/web/src/components/: Footer.tsx  Header.tsx
apps/web/src/data/: localities.ts
apps/web/src/layouts/: Layout.tsx
apps/web/src/pages/: HomePage.tsx  ProfilePage.tsx  ProgramDetailPage.tsx  ProgramsPage.tsx  RecommendationsPage.tsx  TrajectoriesPage.tsx
apps/web/src/services/: api.ts  georef.ts
apps/web/src/utils/: translations.ts
docs/: API_REFERENCE.md  CONTRIBUTING.md  DATA_MODEL.md  MVP_SCOPE.md  VISION.md
infra/docker/: docker-compose.yml  init.sql
